Fix/polish entity insulation config
Took 1 minute